message InterLogout
{
    optional uint64 uid     = 1;
}

//////////////////////////////////////////////////////////////
// cs ss inter 消息id必须唯一
message PBInterMsg
{
    oneof msg_union
    {
        InterLogout  inter_logout   = 5000;
    }
}
